--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
+    "expo-av": "~12.0.4",
     "expo-constants": "~13.2.4",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
@@ -34,6 +35,7 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7",
     "react-speech-recognition": "^3.10.0"
   },
