arreglos de speech to text
arreglos para que funcione speech to text

--- a/app.json
+++ b/app.json
@@ -24,11 +24,14 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "package": "com.jcam01.SenasReact",
+        "versionCode": 1
       },
       "permissions": [
         "android.permission.RECORD_AUDIO"
-      ]
+      ],
+      "package": "com.jcam01.SenasReact"
     },
     "plugins": [
       [
