--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build": "expo build:android"
   },
   "jest": {
     "preset": "jest-expo"
@@ -23,6 +24,7 @@
     "expo-asset": "~8.6.1",
     "expo-av": "~12.0.4",
     "expo-constants": "~13.2.4",
+    "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
     "expo-speech": "~10.3.0",
